vendor/vnc/Viewer.h



/**
 * Enumeration of picture quality levels.
 */
typedef enum {
  /**
   * Auto quality means that the viewer selects an appropriate encoding and
   * colour level based on its own line speed estimate.
   */
  vnc_Viewer_PictureQuality_Auto = 0,
  vnc_Viewer_PictureQuality_High = 1,
  vnc_Viewer_PictureQuality_Medium = 2,
  vnc_Viewer_PictureQuality_Low = 3
} vnc_Viewer_PictureQuality;


/**
 * Sets the desired picture quality of the session from the range of options
 * enumerated by @ref vnc_Viewer_PictureQuality.
 *
 * @param viewer The current Viewer.
 * @param quality The new picture quality.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The picture quality is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setPictureQuality(vnc_Viewer* viewer,
                             vnc_Viewer_PictureQuality quality);


/**
 * Obtains the Viewer's Messaging Manager for handling messaging
 */
VNC_SDK_API vnc_MessagingManager*
vnc_Viewer_getMessagingManager(vnc_Viewer* viewer);


/**
 * Enumeration of encryption levels.
 *
 * @see vnc_Viewer_setEncryptionLevel()
 */
typedef enum {
  /**
   * Use strong encryption.  This is the default.
   */
  vnc_Viewer_EncryptionLevel_Default = 0,
  /**
   * Use the strongest available encryption, possibly at the cost of speed.
   */
  vnc_Viewer_EncryptionLevel_Maximum,
  /**
   * Respect the server's choice of encryption level. This means the viewer
   * will allow connections to third-party servers, but also represents the
   * weakest security, and may open the user up to man-in-the-middle type
   * attacks. Use with caution.
   * Note: to enable this feature, you will need a Third Party Connectivity
   * Add-on code - contact RealVNC for more information.
   */
  vnc_Viewer_EncryptionLevel_Server = 255,
} vnc_Viewer_EncryptionLevel;


/**
 * Sets the desired encryption level of the session from the range of options
 * enumerated by @ref vnc_Viewer_EncryptionLevel.
 *
 * This will not affect the encryption level of established connections.
 *
 * If a Viewer and Server select different encryption levels, connections
 * between them take place at the higher of their selected levels.
 *
 * @param viewer The current Viewer.
 * @param level The new encryption level.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The encryption level is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setEncryptionLevel(vnc_Viewer* viewer,
                              vnc_Viewer_EncryptionLevel level);


/**
 * Returns the Viewer's current encryption level.
 *
 * This returns the actual encryption level in use if the Viewer is connected,
 * or the last value set otherwise.
 */
VNC_SDK_API vnc_Viewer_EncryptionLevel
vnc_Viewer_getEncryptionLevel(vnc_Viewer* viewer);


/**
 * Obtains the Viewer's @ref vnc_DisplayManager, for managing the list of
 * displays made available by the Server to the Viewer.
 *
 * @param viewer The current Viewer.
 * @return A @ref vnc_DisplayManager or NULL on error, in which case
 *     call vnc_getLastError() to get the error code.
 *
 * @retval NotSupported
 *     Display management is not supported on the Server's platform.
 *
 * @since 1.8.0
 */
VNC_SDK_API vnc_DisplayManager*
vnc_Viewer_getDisplayManager(vnc_Viewer* viewer);