src/viewer.rs

extern "C" {
    #[doc = " Sets the desired picture quality of the session from the range of options"]
    #[doc = " enumerated by @ref vnc_Viewer_PictureQuality."]
    #[doc = ""]
    #[doc = " @param viewer The current Viewer."]
    #[doc = " @param quality The new picture quality."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The picture quality is invalid"]
    pub fn vnc_Viewer_setPictureQuality(
        viewer: *mut vnc_Viewer,
        quality: vnc_Viewer_PictureQuality,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Obtains the Viewer's Messaging Manager for handling messaging"]
    pub fn vnc_Viewer_getMessagingManager(viewer: *mut vnc_Viewer) -> *mut vnc_MessagingManager;
}
#[doc = " Use strong encryption.  This is the default."]
pub const vnc_Viewer_EncryptionLevel_vnc_Viewer_EncryptionLevel_Default:
    vnc_Viewer_EncryptionLevel = 0;
#[doc = " Use the strongest available encryption, possibly at the cost of speed."]
pub const vnc_Viewer_EncryptionLevel_vnc_Viewer_EncryptionLevel_Maximum:
    vnc_Viewer_EncryptionLevel = 1;
#[doc = " Respect the server's choice of encryption level. This means the viewer"]
#[doc = " will allow connections to third-party servers, but also represents the"]
#[doc = " weakest security, and may open the user up to man-in-the-middle type"]
#[doc = " attacks. Use with caution."]
#[doc = " Note: to enable this feature, you will need a Third Party Connectivity"]
#[doc = " Add-on code - contact RealVNC for more information."]
pub const vnc_Viewer_EncryptionLevel_vnc_Viewer_EncryptionLevel_Server: vnc_Viewer_EncryptionLevel =
    255;
#[doc = " Enumeration of encryption levels."]
#[doc = ""]
#[doc = " @see vnc_Viewer_setEncryptionLevel()"]
pub type vnc_Viewer_EncryptionLevel = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Sets the desired encryption level of the session from the range of options"]
    #[doc = " enumerated by @ref vnc_Viewer_EncryptionLevel."]
    #[doc = ""]
    #[doc = " This will not affect the encryption level of established connections."]
    #[doc = ""]
    #[doc = " If a Viewer and Server select different encryption levels, connections"]
    #[doc = " between them take place at the higher of their selected levels."]
    #[doc = ""]
    #[doc = " @param viewer The current Viewer."]
    #[doc = " @param level The new encryption level."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The encryption level is invalid"]
    pub fn vnc_Viewer_setEncryptionLevel(
        viewer: *mut vnc_Viewer,
        level: vnc_Viewer_EncryptionLevel,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Returns the Viewer's current encryption level."]
    #[doc = ""]
    #[doc = " This returns the actual encryption level in use if the Viewer is connected,"]
    #[doc = " or the last value set otherwise."]
    pub fn vnc_Viewer_getEncryptionLevel(viewer: *mut vnc_Viewer) -> vnc_Viewer_EncryptionLevel;
}
extern "C" {
    #[doc = " Obtains the Viewer's @ref vnc_DisplayManager, for managing the list of"]
    #[doc = " displays made available by the Server to the Viewer."]
    #[doc = ""]
    #[doc = " @param viewer The current Viewer."]
    #[doc = " @return A @ref vnc_DisplayManager or NULL on error, in which case"]
    #[doc = "     call vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval NotSupported"]
    #[doc = "     Display management is not supported on the Server's platform."]
    #[doc = ""]
    #[doc = " @since 1.8.0"]
    pub fn vnc_Viewer_getDisplayManager(viewer: *mut vnc_Viewer) -> *mut vnc_DisplayManager;
}
